cocktail.ui: prevent word wrapping in the selection controls of CheckList elements

--- a/cocktail/ui/resources/styles/cocktail-ui-checklist.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-checklist.scss
@@ -12,6 +12,7 @@
 
 #selectionControls {
     margin-bottom: 0.8em;
+    white-space: nowrap;
 
     :host(:not([selectionControlsVisible='true'])) & {
         display: none;
